@@ -26,6 +26,7 @@ require( './plugins/HKDFPlugin' ).register();
 require( './plugins/PBKDF2Plugin' ).register();
 require( './plugins/RSAPlugin' ).register();
 require( './plugins/PasswordPlugin' ).register();
+require( './plugins/HMACPlugin' ).register();
 
 const path = require( 'path' );
 
