@@ -1,6 +1,7 @@
 
 === (next) ===
 NEW: plain "Password" plugin support
+NEW: "HMAC" plugin support
 
 === 0.9.4 (2018-05-12) ===
 CHANGED: to use FTN3.1 specs from invoker
